--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -23,8 +23,9 @@
                         </div>
                         <div class="card__actions">
                             <a href="/products/<%= product.id %>" class="btn">Details</a>
-                            <form action="/add-to-cart" method="POST">
+                            <form action="/cart" method="post">
                                 <button class="btn">Add to Cart</button>
+                                
                             </form>
                         </div>
                     </article>
