--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -25,7 +25,7 @@
                             <a href="/products/<%= product.id %>" class="btn">Details</a>
                             <form action="/cart" method="post">
                                 <button class="btn">Add to Cart</button>
-                                
+                                <%- include('../includes/add-to-cart', {product: product}) %>
                             </form>
                         </div>
                     </article>
